--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="main-container">
             <nav class="navbar">
-                <a href="#" class="nav-link">Услуги</a>
+                <a href="#" class="nav-link">Ус</a>
                 <a href="#" class="nav-link">Портфолио</a>
                 <a href="#" class="nav-link">О нас</a>
                 <a href="#" class="nav-link">Отзывы</a>
