--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="services-blocl">
 
                     <div class="services-blocl-img">
-                        <img src="/img/707679.png" alt="" class="log">
+                        <img src="img/707679.png" alt="" class="log">
 
                     </div>   
                     <div class="services-blocl-text">
@@ -81,7 +81,7 @@
                     </div>
                 </div> 
                     <div class="services-blocv-img">
-                        <img src="/img/707677.png" alt="" class="log">
+                        <img src="img/707677.png" alt="" class="log">
                     
                 </div>
 
@@ -89,7 +89,7 @@
                 </div>
                 <div class="services-blocs">
                     <div class="services-blocs-img">
-                        <img src="/img/707680.png" alt="" class="log">
+                        <img src="img/707680.png" alt="" class="log">
                     </div>   
                     <div class="services-blocs-text">
                     <div class="services-blocs-text1">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                         <div class="services-blocr-img">
-                            <img src="/img/707676.png" alt="" class="log">
+                            <img src="img/707676.png" alt="" class="log">
                         </div>  
                 
                 </div> 
