--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <div class="main">
         <div class="main-container">
             <nav class="navbar">
-                <a href="#" class="nav-link">Ус</a>
+                <a href="#" class="nav-link">Услуги</a>
                 <a href="#" class="nav-link">Портфолио</a>
                 <a href="#" class="nav-link">О нас</a>
                 <a href="#" class="nav-link">Отзывы</a>
-
             </nav>
             <div class="main-link">
                 <a href="#" class="main-link1">Gustav </a>
@@ -130,6 +129,25 @@
                 </div>
             </div>
       </div>
+    </div>
+    <div class="work">
+        <div class="work-link">
+            Примеры наших работ
+        </div>
+        <div class="work-menu">
+            <div class="work-menu1">
+                Веб дизайн
+            </div>
+            <div class="work-menu2">
+                Android-приложения  
+            </div>
+            <div class="work-menu3">
+                Логотипы  
+            </div>
+            <div class="work-menu4">
+                UX/UI
+            </div>
+        </div>
     </div>
 
 
