--- a/index.html
+++ b/index.html
@@ -133,21 +133,15 @@
     <div class="work">
         <div class="work-link">
             Примеры наших работ
+            
         </div>
         <div class="work-menu">
-            <div class="work-menu1">
-                Веб дизайн
-            </div>
-            <div class="work-menu2">
-                Android-приложения  
-            </div>
-            <div class="work-menu3">
-                Логотипы  
-            </div>
-            <div class="work-menu4">
-                UX/UI
-            </div>
+            <a href="#" class="work-link-menu">Веб-дизайн</a>
+            <a href="#" class="work-link-menu">Android-приложения</a>
+            <a href="#" class="work-link-menu">Логотипы</a>
+            <a href="#" class="work-link-menu">UX/UI</a>
         </div>
+    </div>
     </div>
 
 
