Add not use block

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <input type="text" class="input3"  placeholder="Комантарий к заказу..." size="23">
             </div>
         </div>
+        <div class="not-use">
+            <h2>Мы Вам не предложим</h2>
+            <ul class="not-use-list">
+                <li>Первый пункт</li>
+            </ul>
+        </div>
         <div class="services">
             <div class="servises-link">
                 Услуги которые мы предоставляем
