--- a/index.html
+++ b/index.html
@@ -149,6 +149,51 @@
         </div>
     </div>
     </div>
+    <div class="working">
+        <div class="working-link">
+            Как мы работаем
+        </div>
+        <div class="working-img">
+
+        </div>
+        <div class="working-bloc1">
+            <div class="working-bloc1-text">
+                Шаг 1
+            </div>
+            <div class="working-bloc1-text">
+                Шаг 2
+            </div>
+            <div class="working-bloc1-text">
+                Шаг 3
+            </div>
+            <div class="working-bloc1-text">
+                Шаг 4
+            </div>
+            <div class="working-bloc1-text">
+                Шаг 5
+            </div>
+        </div>
+        <div class="working-bloc2">
+            <div class="working-bloc2-text">
+                Создание Продающего Landing page
+            </div>
+            <div class="working-bloc2-text">
+                Создание Продающего Landing page
+            </div>
+            <div class="working-bloc2-text">
+                Создание Продающего Landing page
+            </div>
+            <div class="working-bloc2-text">
+                Создание Продающего Landing page
+            </div>
+            <div class="working-bloc2-text">
+                Создание Продающего Landing page
+            </div>
+        </div>
+        <div class="working-button">
+            Подать заявку
+        </div>
+    </div>
 
 
 
