--- a/index.html
+++ b/index.html
@@ -35,11 +35,26 @@
                 <input type="text" class="input3"  placeholder="Комантарий к заказу..." size="23">
             </div>
         </div>
-        <div class="not-use">
-            <h2>Мы Вам не предложим</h2>
-            <ul class="not-use-list">
-                <li>Первый пункт</li>
-            </ul>
+        <div class="rules">
+            <h2>Правила успешного сотрудничества</h2>
+            
+                <div class="rulesfirst">
+                    <img src="#" alt="" class="rulesfirst-img">
+                    <div class="rulesfirst-text">"объективно и прозрачно"</div>
+                </div>
+                <div class="rulessecond"> 
+                    <img src="#" alt="" class="rulessecond-img">
+                    <div class="rulessecond-text">"Сдача проекта в срок"</div>
+                </div>
+                <div class="rulesthird"> 
+                    <img src="#" alt="" class="rulesthird-img">
+                    <div class="rulesthird-text">"Поддержка проекта после оканчания работы"</div>
+                </div>
+                <div class="rulesfour"> 
+                    <img src="#" alt="" class="rulesfour-img">
+                    <div class="rulesfour-text">"Фиксируемые Цены"</div>
+                </div>
+           
         </div>
         <div class="services">
             <div class="servises-link">
