Edit block service

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="rules">
-            <h2>Правила успешного сотрудничества</h2>
+            <h2>Наши правила успешного сотрудничества</h2>
             <div class="rulesfirst">
                 <img src="#" alt="" class="rulesfirst-img">
                 <p class="rulesfirst-text">"Объективно и прозрачно"</p>
@@ -57,7 +57,7 @@
                 Меня зовут Дмитрий Валак. Я занимаюсь разработкой сайтов уже много лет, специализируюсь больше на front-end разработке и верстке сайтов, но и программирование тоже изучаю.
             </p>
             <div class="services-blocks">
-                <div class="services-block">
+                <div class="services-block services-block-right">
                     <div class="services-block-img">
                         <img src="img/service-block1.png" alt="" class="log">
                     </div>   
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="services-block">
+                <div class="services-block services-block-left">
                     <div class="services-block-img">
                         <img src="img/service-block2.png" alt="" class="log">
                     </div>   
@@ -95,7 +95,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="services-block">
+                <div class="services-block services-block-right">
                     <div class="services-block-img">
                         <img src="img/service-block3.png" alt="" class="log">
                     </div>   
@@ -114,7 +114,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="services-block">
+                <div class="services-block services-block-left">
                     <div class="services-block-img">
                         <img src="img/service-block4.png" alt="" class="log">
                     </div>   
@@ -135,66 +135,64 @@
                 </div>
             </div>
         </div>
+
+        <div class="work">
+            <div class="work-link">
+                Примеры наших работ
+            </div>
+            <div class="work-menu">
+                <a href="#" class="work-link-menu">Веб-дизайн</a>
+                <a href="#" class="work-link-menu">Android-приложения</a>
+                <a href="#" class="work-link-menu">Логотипы</a>
+                <a href="#" class="work-link-menu">UX/UI</a>
+            </div>
+        </div>
+        <div class="working">
+            <div class="working-link">
+                Как мы работаем
+            </div>
+            <div class="working-img">
+
+            </div>
+            <div class="working-bloc1">
+                <div class="working-bloc1-text">
+                    Шаг 1
+                </div>
+                <div class="working-bloc1-text">
+                    Шаг 2
+                </div>
+                <div class="working-bloc1-text">
+                    Шаг 3
+                </div>
+                <div class="working-bloc1-text">
+                    Шаг 4
+                </div>
+                <div class="working-bloc1-text">
+                    Шаг 5
+                </div>
+            </div>
+            <div class="working-bloc2">
+                <div class="working-bloc2-text">
+                    Создание Продающего Landing page
+                </div>
+                <div class="working-bloc2-text">
+                    Создание Продающего Landing page
+                </div>
+                <div class="working-bloc2-text">
+                    Создание Продающего Landing page
+                </div>
+                <div class="working-bloc2-text">
+                    Создание Продающего Landing page
+                </div>
+                <div class="working-bloc2-text">
+                    Создание Продающего Landing page
+                </div>
+            </div>
+            <div class="working-button">
+                Подать заявку
+            </div>
+        </div>
+
     </div>
-
-    <div class="work">
-        <div class="work-link">
-            Примеры наших работ
-        </div>
-        <div class="work-menu">
-            <a href="#" class="work-link-menu">Веб-дизайн</a>
-            <a href="#" class="work-link-menu">Android-приложения</a>
-            <a href="#" class="work-link-menu">Логотипы</a>
-            <a href="#" class="work-link-menu">UX/UI</a>
-        </div>
-    </div>
-    <div class="working">
-        <div class="working-link">
-            Как мы работаем
-        </div>
-        <div class="working-img">
-
-        </div>
-        <div class="working-bloc1">
-            <div class="working-bloc1-text">
-                Шаг 1
-            </div>
-            <div class="working-bloc1-text">
-                Шаг 2
-            </div>
-            <div class="working-bloc1-text">
-                Шаг 3
-            </div>
-            <div class="working-bloc1-text">
-                Шаг 4
-            </div>
-            <div class="working-bloc1-text">
-                Шаг 5
-            </div>
-        </div>
-        <div class="working-bloc2">
-            <div class="working-bloc2-text">
-                Создание Продающего Landing page
-            </div>
-            <div class="working-bloc2-text">
-                Создание Продающего Landing page
-            </div>
-            <div class="working-bloc2-text">
-                Создание Продающего Landing page
-            </div>
-            <div class="working-bloc2-text">
-                Создание Продающего Landing page
-            </div>
-            <div class="working-bloc2-text">
-                Создание Продающего Landing page
-            </div>
-        </div>
-        <div class="working-button">
-            Подать заявку
-        </div>
-    </div>
-
-
-
   </body>
 </html>
